crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_test__tests__format_github@GitHub Actions-test_failed.snap
---
source: crates/cifmt/src/tool/cargo_test.rs
expression: formatted
---
::endgroup::
::notice title=Test Failed: test_failing (executed in 0.00s)::assertion failed
