crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_test__tests__format_github@GitHub Actions-test_ok.snap
---
source: crates/cifmt/src/tool/cargo_test.rs
expression: formatted
---
::notice title=Test Passed: test_example::Executed in 0.00s
::endgroup::
