crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_test__tests__format_github@GitHub Actions-test_started.snap
---
source: crates/cifmt/src/tool/cargo_test.rs
expression: formatted
---
::group::Test: test_example
