crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_test__tests__ok_with_stdout_formats_with_output.snap
---
source: crates/cifmt/src/tool/cargo_test.rs
expression: formatted
---
::notice title=Test Passed: test_with_output::Executed in 0.12s
::endgroup::
