crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_test__tests__passed_test_formats_as_empty.snap
---
source: crates/cifmt/src/tool/cargo_test.rs
expression: formatted
---
::notice title=Test Passed: my_test::should_work::Executed in 0.00s
::endgroup::
