crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_test__tests__report_formats_as_notice.snap
---
source: crates/cifmt/src/tool/cargo_test.rs
expression: formatted
---
::notice title=Doctest Report::Total: 3.50s, Compilation: 2.10s
