crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_test__tests__suite_completed_formats_as_notice.snap
---
source: crates/cifmt/src/tool/cargo_test.rs
expression: formatted
---
::endgroup::
::notice title=Test Discovery::Discovered 18 items: 15 tests, 3 benchmarks, 2 ignored
