crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_test__tests__suite_ok_formats_as_notice.snap
---
source: crates/cifmt/src/tool/cargo_test.rs
expression: formatted
---
::notice title=Test Suite Passed::10 passed, 0 failed, 2 ignored, 0 measured, 1 filtered out in 2.50s
