crates/cifmt/src/tool/snapshots/cifmt__tool__cargo_test__tests__timeout_formats_as_error.snap
---
source: crates/cifmt/src/tool/cargo_test.rs
expression: formatted
---
::endgroup::
::error title=Test Timeout::test_slow
